--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,9 +1,10 @@
 {
-    "printWidth": 140,
-    "tabWidth": 4,
-    "semi": true,
-    "singleQuote": false,
-    "trailingComma": "all",
-    "endOfLine": "auto",
-    "useTabs": true
+	"printWidth": 140,
+	"tabWidth": 4,
+	"semi": true,
+	"singleQuote": false,
+	"trailingComma": "all",
+	"endOfLine": "auto",
+	"useTabs": true,
+	"arrowParens": "avoid"
 }
